fix z-index of portrait to put behind links

--- a/main.css
+++ b/main.css
@@ -40,13 +40,13 @@ h2 {
     animation: slideinfrombot 0.5s ease, slideoutfromright 0.4s ease;
     animation-delay: 0s, 0.8s;
     animation-fill-mode: forwards;
-    z-index: 1;
+    z-index: 0;
 }
 
 .logo {
     opacity: 0;
     animation: opaqueslide 0.4s ease;
-    animation-delay: 0.9s;
+    animation-delay: 0.8s;
     animation-fill-mode: forwards;
     z-index: 0;
     justify-self: end;
